2007-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-plugins-engine.c:
	(totem_plugins_engine_shutdown):
	* src/totem-uri.c: (totem_destroy_file_filters):
	* src/totem.c: (totem_action_save_state), (main):
	Don't crash on exit when launching remote commands to an existing
	instance of Totem

2007-05-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences):
	Don't muck around with a stock translated string, as we'd get
	extra bits we don't want for a window title, fixes "XXX(Y)" appearing
	as a window title for non-latin languages (Closes: #412560)

2007-04-27  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/sidebar-test/totem-sidebar-test.c: (impl_activate):
	Fixed the test sidebar plugin for the new activation API

2007-04-26  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* configure.in:
	* src/Makefile.am:
	* src/plugins/gromit/Makefile.am:
	* src/plugins/gromit/gromit.totem-plugin.in:
	* src/plugins/gromit/totem-gromit.c:
	(totem_gromit_plugin_class_init), (totem_gromit_plugin_init),
	(totem_gromit_plugin_finalize), (totem_gromit_available),
	(totem_gromit_exit), (totem_gromit_timeout_cb),
	(totem_gromit_toggle), (totem_gromit_clear),
	(on_window_key_press_event), (impl_activate), (impl_deactivate):
	* src/totem-gromit.c:
	* src/totem-gromit.h:
	* src/totem.c: (totem_action_exit),
	(totem_action_handle_key_press): Move gromit annotation support into a
	new plugin. (Closes #428290)

2007-04-26  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in: Fix typo in the schema

2007-04-26  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* src/plugins/galago/totem-galago.c:
	(totem_galago_plugin_finalize), (impl_activate):
	* src/plugins/lirc/totem-lirc.c: (impl_activate):
	* src/plugins/media-player-keys/totem-media-player-keys.c:
	(impl_activate):
	* src/plugins/ontop/totem-ontop.c: (impl_activate):
	* src/plugins/screensaver/totem-screensaver.c: (impl_activate):